# analytics-udp-filters

./: .gitignore  .gitreview  AUTHORS  COPYING  ChangeLog  INSTALL  KNOWN_ISSUES  Makefile  Makefile.am  NEWS  README  SimpleMake  compile.sh  config.h  configure  configure.ac  control-sample  copyright-sample  debianize.sh  example.collector.expected_result  exclude  fabfile.py  git2deblogs  help2man.include  inspect_log_file  lint.sh  release.sh  run.sh  udp-filter.manpages
debian/: README.Debian  README.source  changelog  control  copyright  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  udp-filter.dirs  udp-filter.files  udp-filters.cron.d.ex  udp-filters.default.ex  udp-filters.dirs  udp-filters.doc-base.EX  udp-filters.files  udp-filters.substvars  watch.ex
docs/: help2man.include  udp-filter.1
src/: anonymize.c  anonymize.h  collector-output.c  collector-output.h  countries.c  countries.h  geo.c  geo.h  match.c  match.h  multiplexor.c  radix-tree.c  radix-tree.h  udp-filter.c  udp-filter.h  udp.c  utils.c  utils.h
tests/: check-udp-filter.c
